[gd_scene load_steps=5 format=3 uid="uid://qu1ysjysh7mu"]

[ext_resource type="Script" path="res://Scripts/Game/UI/PurchasePogButton.gd" id="1_v7ib4"]
[ext_resource type="Texture2D" uid="uid://dhpd08noiq48g" path="res://Art/Characters/Archer.png" id="2_l4psa"]
[ext_resource type="PackedScene" uid="uid://jg1gac10pqvt" path="res://Prefabs/Frame.tscn" id="2_o8pxo"]
[ext_resource type="Texture2D" uid="uid://e2c4066hnaa5" path="res://Art/Coin.png" id="3_fkyy4"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(130, 300)
script = ExtResource("1_v7ib4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -85.0
offset_right = 60.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Frame" parent="VBoxContainer" instance=ExtResource("2_o8pxo")]
layout_mode = 2

[node name="Face" type="TextureRect" parent="VBoxContainer/Frame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -55.5
offset_right = 59.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_l4psa")

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 110)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Mira the Aracher"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_fkyy4")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
